# sipp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.ts  cliff.toml  dist-workspace.toml  docker-compose.yml  package.json  sipps.sqlite  snippet.sh
.github/: FUNDING.yml
.github/workflows/: changelog.yml  release.yml  rust.yml
src/: about.html  backend.rs  config.rs  darkmatter.tmTheme  db.rs  db.ts  highlight.rs  index.html  index.ts  index.tsx  lib.rs  main.rs  server.rs  snippet.html  styles.css  tui.rs  view.html
static/: styles.css
templates/: about.html  admin.html  index.html  snippet.html
