[package]
name = "sipp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sipp"
path = "src/main.rs"

[dependencies]
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
askama = "0.15.4"
askama_web = { version = "0.15.1", features = ["axum-0.8"] }
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.6.8", features = ["fs"] }
rand = "0.10"
ratatui = "0.30"
crossterm = "0.29"
arboard = "3"
syntect = "5"
reqwest = { version = "0.13", features = ["json", "blocking"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
toml = "1.0"
rpassword = "7"
open = "5.3.3"
rust-embed = "8"
dotenvy = "0.15"
subtle = "2"
