[package]
name = "sipp-so"
version = "0.1.5"
edition = "2024"
description = "Minimal code sharing - single binary for web server, CLI, and TUI"
license = "MIT"
repository = "https://github.com/stevedylandev/sipp"
homepage = "https://sipp.so"
documentation = "https://github.com/stevedylandev/sipp#readme"
readme = "README.md"
keywords = ["cli", "tui", "snippet", "code-sharing", "pastebin"]
categories = ["command-line-utilities", "web-programming"]
authors = ["Steve Simkins"]
exclude = [".github", "*.png", "*.gif"]

[[bin]]
name = "sipp"
path = "src/main.rs"

[dependencies]
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
askama = "0.15.4"
askama_web = { version = "0.15.1", features = ["axum-0.8"] }
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.6.8", features = ["fs"] }
nanoid = "0.4.0"
ratatui = "0.30"
crossterm = "0.29"
arboard = "3"
syntect = "5"
reqwest = { version = "0.13", features = ["json", "blocking"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
toml = "1.0"
rpassword = "7"
open = "5.3.3"
rust-embed = "8"
dotenvy = "0.15"
subtle = "2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
